# agent-demo-dev

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  azure.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  mcp.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-infra.yml  link-check.yml  live-smoke.yml  pages.yml
data/sec-edgar/: companies.csv  company_financials.csv
demo/: configure_agent.py  configure_market_agent.py  demo-1-quick-win.md  demo-2-full-workflow.md  demo-3-engineering.md  demo.ps1  load-market-data.py  load-sample-data.py  load-wwi-data.py  mock-workiq-activity.json  publish_agent.py  run_notebook.py
demo/market-data/: companies.csv
demo/sample-data/: quota_Target.csv
demo/sharepoint-docs/: Sales_Playbook.md
docs/: architecture.md  costs.md  data-paths.md  demo-script.md  security-model.md  setup-guide.md  two-surfaces.md
docs/diagrams/: architecture.md  generate_arch.py
docs/surfaces/: README.md  copilot-studio.md  cowork.md  foundry.md  m365-direct.md
evals/sales-agent/: eval.yaml
evals/wwi-agent/datasets/: golden-prompts.jsonl
evals/wwi-agent/rubrics/: quota-quality.md
fabric/: data-agent-config.json  market-data-agent-config.json
fabric/data-source-instructions/: market-data.md  sales-data.md
fabric/example-queries/: market-queries.sql  sales-queries.sql
infra/: README.md  bicepconfig.json  main.bicep  main.json  main.parameters.json  params.dev.json
infra/modules/: ai-foundry.bicep  app-insights.bicep  budget.bicep  cognitive-services.bicep  container-registry.bicep  entra-app.bicep  fabric-capacity.bicep  foundry-project.bicep  keyvault.bicep  policy.bicep  storage.bicep
infra/parameters/: dev.bicepparam
schemas/: sales-analysis-output.json
scripts/: check_workshop_visuals.py  demo_check.py  live_smoke_report.py  load_sec_edgar.py  predemo.py  recorded_live_proof.py  run_foundry_local_demo.ps1  setup_oidc.ps1  setup_oidc.sh  validate_links.py  verify_foundry_agent.py
src/agents/quota_estimator/: __init__.py  data_sources.py  market_research_adapter.py  mcp_server.py  models.py  pipeline.py  recorded_source.py  renderers.py
src/agents/report_generator/: generator.py  mcp_server.py
src/agents/researcher/: mcp_server.py  tools.py
src/cli/: README.md  fabric_mcp_proxy.py  mcp-config.json
src/orchestrator/: __main__.py  config.py  databricks_genie.py  databricks_supervisor.py  fabric_mcp_client.py  foundry_agent.py  tool_runtime.py  tool_schemas.py
tests/: conftest.py
tests/eval/: golden-qa.json  run_eval.py
tests/integration/: test_mcp_servers.py
tests/unit/: test_agent_framework_runtime.py  test_check_workshop_visuals.py  test_databricks_genie_client.py  test_databricks_supervisor.py  test_demo_check_readiness.py  test_eval_live_config.py  test_fabric_mcp_client.py  test_foundry_promotion.py  test_hosted_agent.py  test_hosted_agent_manifest.py  test_hosted_server.py  test_live_smoke_report.py  test_market_data_loader.py  test_market_research_contract.py  test_mcp_config.py  test_multi_agent_pipeline.py  test_orchestrator.py  test_quota_estimator.py  test_quota_methodology_skill.py  test_recorded_live_proof.py  test_report_generator.py  test_researcher.py  test_sharepoint.py  test_tool_schema_consistency.py  test_validate_links.py  test_verify_foundry_agent.py
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: intro.md  setup.md
(+62 files in other folders)
