[project]
name = "fabric-sales-agent-accelerator"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "aiohttp >= 3.9",
    "azure-ai-projects >= 2.2.0",
    "azure-identity >= 1.17",
    "matplotlib >= 3.8",
    "mcp >= 1.0",
    "python-docx >= 1.1",
    "python-dotenv >= 1.0",
    "python-pptx >= 1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]

[tool.mypy]
warn_return_any = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.agents.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: MCP server integration tests (start subprocess, communicate via stdio)",
]
